traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:17: error: ';' expected but 'else' found.
        else
        ^Snake:26: error: ';' expected but 'else' found.
        else
        ^